Re-implement initial ECJ harness